[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_chenglim"
version = "0.0.1"
authors = [
  { name="Chenglim Ear", email="chenglim.ear@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChenglimEar/example_package_chenglim"
"Bug Tracker" = "https://github.com/ChenglimEar/example_package_chenglim/issues"